Fix spacing/syntax

--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,9 +1,28 @@
 footer {
-  height: 120px;
-  background-color: red;
-  padding: 0 1em;
+  height: 400px;
   margin-top: 40px;
 }
+
+footer .footer-textContent {
+  background-color: var(--mainColor);
+  height: 100%;
+}
+
+footer .footer-image svg {
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+footer .footer-image  {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: relative;
+}
+
+
 
 footer h3 {
   display: inline-block;
