--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,7 +19,7 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: var(--cream);
   font-size: 24px;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 300;
